[gd_scene load_steps=5 format=3 uid="uid://xll3ju20bphf"]

[ext_resource type="Texture2D" uid="uid://cqq3qhpcqm2su" path="res://art/orb.png" id="1_8wc4j"]
[ext_resource type="Script" path="res://enemies/orb.gd" id="1_wiy4y"]
[ext_resource type="AudioStream" uid="uid://cp6gubcs6seq" path="res://audio/mechanical2.wav" id="3_3lwhu"]
[ext_resource type="AudioStream" uid="uid://d1tdbnullcp8p" path="res://audio/shot.wav" id="4_qrj16"]

[node name="Orb" type="CharacterBody2D"]
script = ExtResource("1_wiy4y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8wc4j")

[node name="TimeBetweenBulletsTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Rotater" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3lwhu")
volume_db = 5.0
autoplay = true
max_distance = 1000.0

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qrj16")
max_distance = 1000.0

[connection signal="timeout" from="TimeBetweenBulletsTimer" to="." method="_on_time_between_bullets_timer_timeout"]
